testsuite/tests/properties/invalid_enum_dflt_val/too_many_args.lkt
import common

@with_default(a, b) enum MyEnum {
    case a, b, c
}
